--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "composer/installers": "^2.3",
         "cweagans/composer-patches": "^1.7",
         "dealerdirect/phpcodesniffer-composer-installer": "1.0.0",
+        "drupal/admin_toolbar": "^3.6",
+        "drupal/captcha": "^2.0",
         "drupal/coder": "^8.3",
         "drupal/core-composer-scaffold": "^11.2",
         "drupal/core-project-message": "^11.2",
