Enable captcha endpoints

--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,7 @@
         "drupal/core-project-message": "^11.2",
         "drupal/core-recipe-unpack": "^11.2",
         "drupal/core-recommended": "^11.2",
-        "drush/drush": "^13.6",
-        "mglaman/phpstan-drupal": "^2.0",
-        "weitzman/drupal-test-traits": "^2.5"
+        "drush/drush": "^13.6"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -113,6 +111,8 @@
     },
     "require-dev": {
         "drupal/core-dev": "^11.2",
+        "mglaman/phpstan-drupal": "^2.0",
+        "weitzman/drupal-test-traits": "^2.5",
         "squizlabs/php_codesniffer": "*"
     }
 }
