Change title on add and update forms

--- a/config/sync/user.role.content_editor.yml
+++ b/config/sync/user.role.content_editor.yml
@@ -37,6 +37,7 @@ permissions:
   - 'delete own files'
   - 'delete own page content'
   - 'delete page revisions'
+  - 'edit any article content'
   - 'edit own article content'
   - 'edit own comments'
   - 'edit own page content'
